--- a/assets/bundles/bundle_pl.properties
+++ b/assets/bundles/bundle_pl.properties
@@ -12,7 +12,7 @@ extremity-welcome = [accent]Witaj!\
   \nSprawd\u017A ustawienia moda je\u017Celi chcesz go wy\u0142\u0105czy\u0107, lub co\u015B zmieni\u0107!
 net.extremity-welcome = [accent]Witaj!\
   \n[lightgray]Host u\u017Cywa [scarlet]Extremity[], czyli moda utrudniaj\u0105cego gr\u0119 stworzonego przez [green]W[orange]M[brown]F[][][]!\
-  \nRozwa\u017C instalacj\u0119 Extremity aby zwi\u0119kszy\u0107 kompatybilno\u015B\u0107 z hostem!
+  \nRozwa\u017C instalacj\u0119 [accent]Extremity[] aby zwi\u0119kszy\u0107 kompatybilno\u015B\u0107 z hostem!
 
 # First boot welcome message of the mod - split into a few parts cause it really is long
 extremity-info = [accent]Witaj w Extremity![]\
@@ -96,11 +96,11 @@ list.extremity-modifiers-begin = --- [ [accent]Modyfikacje[] ] ---
 list.extremity-modifiers-end = --- [ Strona @/@ ] ---
 
 # Command feedback
-cmd.extremity-difficulty = [accent][Extremity][] Aktualna skala trudno\u015Bci wynosi @
-cmd.extremity-insufficient = [accent][Extremity][scarlet] Brak uprawnie\u0144.
-cmd.extremity-reset = [accent][Extremity][] Przywr\u00F3cono domy\u015Blny unitdex!
-cmd.extremity-submitted = [accent][Extremity][] Ustawiono nowy unitdex!
-cmd.extremity-ready = [[accent][Extremity][] Zapisano dane w pami\u0119ci podr\u0119cznej\nU\u017Cyj [accent]/unitdex submit[] aby zatwierdzi\u0107!
+cmd.extremity-difficulty = [accent][Extremity][]: Aktualna skala trudno\u015Bci wynosi @
+cmd.extremity-insufficient = [accent][Extremity][]:[scarlet] Brak uprawnie\u0144.
+cmd.extremity-reset = [accent][Extremity][]: Przywr\u00F3cono domy\u015Blny unitdex!
+cmd.extremity-submitted = [accent][Extremity][]: Ustawiono nowy unitdex!
+cmd.extremity-ready = [[accent][Extremity][]: Zapisano dane w pami\u0119ci podr\u0119cznej\nU\u017Cyj [accent]/unitdex submit[] aby zatwierdzi\u0107!
 
 # Console feedback
 con.extremity-difficulty = Aktualna skala trudno\u015Bci wynosi @
@@ -108,26 +108,26 @@ con.extremity-difficulty-set = Ustawiono skal\u0119 trudno\u015Bci na @
 con.extremity-applied = Ustawiono nowy unitdex
 
 # Vote feedback
-vote.extremity-ongoing = [accent][Extremity][scarlet] G\u0142osowanie ju\u017C trwa, zaczekaj a\u017C si\u0119 zako\u0144czy!
-vote.extremity-denied = [accent][Extremity][scarlet] Nie mo\u017Cesz g\u0142osowa\u0107 dwa razy!
-vote.extremity-time.difficulty = [accent][Extremity][] Pozosta\u0142o @ sekund!\nZag\u0142osuj u\u017Cywaj\u0105c /diffvote (y/n)
-vote.extremity-invalid.difficulty = [accent][Extremity][] [scarlet]Nieprawid\u0142owy parametr, u\u017Cyj /difficulty <0-10> aby zacz\u0105\u0107 g\u0142osowanie lub <yes/y>/<no/n> aby zag\u0142osowa\u0107!
-vote.extremity-cancelled.difficulty = [accent][Extremity][] Inicjator anulowa\u0142 g\u0142osowanie zmiany skali trudno\u015Bci.
-vote.extremity-cancelled-admin.difficulty = [accent][Extremity][] G\u0142osowanie zmiany skali trudno\u015Bci zosta\u0142o anulowane przez @
-vote.extremity-skip.difficulty = [accent][Extremity][] Zmiana skali trudno\u015Bci zosta\u0142a wymuszona przez @
+vote.extremity-ongoing = [accent][Extremity][]:[scarlet] G\u0142osowanie ju\u017C trwa, zaczekaj a\u017C si\u0119 zako\u0144czy!
+vote.extremity-denied = [accent][Extremity][]:[scarlet] Nie mo\u017Cesz g\u0142osowa\u0107 dwa razy!
+vote.extremity-time.difficulty = [accent][Extremity][]: Pozosta\u0142o @ sekund!\nZag\u0142osuj u\u017Cywaj\u0105c /diffvote (y/n)
+vote.extremity-invalid.difficulty = [accent][Extremity][]:[scarlet] Nieprawid\u0142owy parametr, u\u017Cyj /difficulty <0-10> aby zacz\u0105\u0107 g\u0142osowanie lub <yes/y>/<no/n> aby zag\u0142osowa\u0107!
+vote.extremity-cancelled.difficulty = [accent][Extremity][]: Inicjator anulowa\u0142 g\u0142osowanie zmiany skali trudno\u015Bci.
+vote.extremity-cancelled-admin.difficulty = [accent][Extremity][]: G\u0142osowanie zmiany skali trudno\u015Bci zosta\u0142o anulowane przez @
+vote.extremity-skip.difficulty = [accent][Extremity][]: Zmiana skali trudno\u015Bci zosta\u0142a wymuszona przez @
 vote.extremity-voted.difficulty = @ [white] zag\u0142osowa\u0142 [lime]za[] zmian\u0105 skali trudno\u015Bci na @ (@/@)\nZag\u0142osuj u\u017Cywaj\u0105c /diffvote (y/n)
 vote.extremity-voted-against.difficulty = @ [white] zag\u0142osowa\u0142 [scarlet]przeciw[] zmianie skali trudno\u015Bci na @ (@/@)\nZag\u0142osuj u\u017Cywaj\u0105c /diffvote (y/n)
-vote.extremity-success.difficulty = [accent][Extremity][] G\u0142osowanie zmiany skali trudno\u015Bci zako\u0144czone pomy\u015Blnie, ustawianie skali na @!
-vote.extremity-fail.difficulty = [accent][Extremity][] G\u0142osowanie zmiany skali trudno\u015Bci zako\u0144czone.
-vote.extremity-time.modifier = [accent][Extremity][] @ Pozosta\u0142o @ sekund!\nZag\u0142osuj u\u017Cywaj\u0105c /modifier (y/n)
-vote.extremity-invalid.modifier = [accent][Extremity][scarlet] Nieprawid\u0142owy parametr, u\u017Cyj /modifier <id> aby zacz\u0105\u0107 g\u0142osowanie lub <yes/y>/<no/n> aby zag\u0142osowa\u0107!
-vote.extremity-cancelled = [accent][Extremity][] Inicjator anulowa\u0142 g\u0142osowanie zmiany modyfikatora.
-vote.extremity-cancelled-admin.modifier = [accent][Extremity][] G\u0142osowanie zmiany modyfikatora zosta\u0142o anulowane przez @
-vote.extremity-skip.modifier = [accent][Extremity][] Zmiana modyfikatora zosta\u0142a wymuszona przez @
+vote.extremity-success.difficulty = [accent][Extremity][]: G\u0142osowanie zmiany skali trudno\u015Bci zako\u0144czone pomy\u015Blnie, ustawianie skali na @!
+vote.extremity-fail.difficulty = [accent][Extremity][]: G\u0142osowanie zmiany skali trudno\u015Bci zako\u0144czone.
+vote.extremity-time.modifier = [accent][Extremity][]: @ Pozosta\u0142o @ sekund!\nZag\u0142osuj u\u017Cywaj\u0105c /modifier (y/n)
+vote.extremity-invalid.modifier = [accent][Extremity][]:[scarlet] Nieprawid\u0142owy parametr, u\u017Cyj /modifier <id> aby zacz\u0105\u0107 g\u0142osowanie lub <yes/y>/<no/n> aby zag\u0142osowa\u0107!
+vote.extremity-cancelled = [accent][Extremity][]: Inicjator anulowa\u0142 g\u0142osowanie zmiany modyfikatora.
+vote.extremity-cancelled-admin.modifier = [accent][Extremity][]: G\u0142osowanie zmiany modyfikatora zosta\u0142o anulowane przez @
+vote.extremity-skip.modifier = [accent][Extremity][]: Zmiana modyfikatora zosta\u0142a wymuszona przez @
 vote.extremity-voted.modifier = @ [white] zag\u0142osowa\u0142 [lime]za[] w\u0142\u0105czeniem [accent]@[] (@/@)\nZag\u0142osuj u\u017Cywaj\u0105c /modifier (y/n)
 vote.extremity-voted.modifier-disable = @ [white] zag\u0142osowa\u0142 [lime]za[] wy\u0142\u0105czeniem [accent]@[] (@/@)\nZag\u0142osuj u\u017Cywaj\u0105c /modifier (y/n)
 vote.extremity-voted-against.modifier = @ [white] zag\u0142osowa\u0142 [scarlet]przeciw[] w\u0142\u0105czeniu [accent]@[] (@/@)\nZag\u0142osuj u\u017Cywaj\u0105c /modifier (y/n)
 vote.extremity-voted-against.modifier-disable = @ [white] zag\u0142osowa\u0142 [scarlet]przeciw[] wy\u0142\u0105czeniu [accent]@[] (@/@)\nZag\u0142osuj u\u017Cywaj\u0105c /modifier (y/n)
-vote.extremity-success.modifier-enable = [accent][Extremity][] G\u0142osowanie zmiany modyfikatora zako\u0144czone pomy\u015Blnie, w\u0142\u0105czanie [accent]@[]!
-vote.extremity-success.modifier-disable = [accent][Extremity][] G\u0142osowanie zmiany modyfikatora zako\u0144czone pomy\u015Blnie, wy\u0142\u0105czanie [accent]@[]!
-vote.extremity-fail.modifier = [accent][Extremity][] G\u0142osowanie zmiany modyfikatora zako\u0144czone.
+vote.extremity-success.modifier-enable = [accent][Extremity][]: G\u0142osowanie zmiany modyfikatora zako\u0144czone pomy\u015Blnie, w\u0142\u0105czanie [accent]@[]!
+vote.extremity-success.modifier-disable = [accent][Extremity][]: G\u0142osowanie zmiany modyfikatora zako\u0144czone pomy\u015Blnie, wy\u0142\u0105czanie [accent]@[]!
+vote.extremity-fail.modifier = [accent][Extremity][]: G\u0142osowanie zmiany modyfikatora zako\u0144czone.
