dedicated server notifications

--- a/assets/bundles/bundle_pl.properties
+++ b/assets/bundles/bundle_pl.properties
@@ -1,27 +1,34 @@
-# None of these messages are sent over the network, instead, the client running the mod fetches them if needed
-# Error messages used by the networking code
+# Wiadomo\u015Bci b\u0142\u0119d\u00F3w u\u017Cywane przez kod synchronizacji
 extremity-outdated = [scarlet]Do\u0142\u0105czy\u0142 gracz z nowsz\u0105 wersj\u0105 Extremity, zaktualizuj moda aby unikn\u0105\u0107 problem\u00F3w! [lightgray](Twoja wersja: [orange]v@[], Ich wersja: [orange]v@[])
 extremity-error = [scarlet]Twoja wersja Extremity nie zgadza si\u0119 z wersj\u0105 hosta, mog\u0105 wyst\u0105pi\u0107 problemy! [lightgray](Twoja wersja: [orange]v@[], Ich wersja: [orange]v@[])
 
-# Responses used by the networking code
+# Odpowiedzi u\u017Cywane przez kod synchronizacji
 extremity-success = [lime]Pobrano konfiguracj\u0119 Extremity od hosta!
 
-# A welcome message for the host, sent when the world is loaded
+# Wiadomo\u015B\u0107 powitalna wy\u015Bwietlana po za\u0142adowaniu \u015Bwiata
 extremity-welcome = [accent]Witaj!\
   \nTa przypominajka wy\u015Bwietla si\u0119 jako i\u017C Extremity mo\u017Ce nadal by\u0107 aktywne\
   \nSprawd\u017A ustawienia moda je\u017Celi chcesz go wy\u0142\u0105czy\u0107, lub co\u015B zmieni\u0107!
+
+# Wiadomo\u015B\u0107 powitalna wysy\u0142ana graczom bez moda
 net.extremity-welcome = [accent]Witaj!\
   \n[lightgray]Host u\u017Cywa [scarlet]Extremity[], czyli moda utrudniaj\u0105cego gr\u0119 stworzonego przez [green]W[orange]M[brown]F[][][]!\
   \nRozwa\u017C instalacj\u0119 [accent]Extremity[] aby zwi\u0119kszy\u0107 kompatybilno\u015B\u0107 z hostem!
 
-# First boot welcome message of the mod - split into a few parts cause it really is long
+# Przypominajki
+net.extremity-active = [accent][Extremity][]: [lightgray]Przypominajka - skalowanie trudno\u015Bci oraz modyfikatory mog\u0105 by\u0107 aktywne\
+  \nSprawd\u017A aktualne ustawienia u\u017Cywaj\u0105c [lime]/difficulty[] i [lime]/modifiers
+net.extremity-modifiers = [accent][Extremity][]: [lightgray]Przypominajka - niekt\u00F3re modyfikatory mog\u0105 by\u0107 aktywne\
+  \nSprawd\u017A aktualny stan modyfikator\u00F3w u\u017Cywaj\u0105c [lime]/modifiers
+
+# Wiadomo\u015B\u0107 wy\u015Bwietlana podczas pierwszego uruchomienia
 extremity-info = [accent]Witaj w Extremity![]\
   \n\nTen mod stara si\u0119 [scarlet]utrudni\u0107 gr\u0119 bez modyfikowania czy dodawania kontentu, zamiast tego, dodaje nowe zachowania gry.\
   \n\nCz\u0119\u015B\u0107 nowych zachowa\u0144 jest do\u015B\u0107 cie\u017Cka, dlatego [accent]Extremity[] przeznaczona jest dla wydajniejszych urz\u0105dze\u0144.\
   \nS\u0142absze urz\u0105dzenia mog\u0105 mie\u0107 problemy z wydajno\u015Bci\u0105, bugi lub nawet wywo\u0142ywa\u0107 crashe!\
   \n\nPrzejd\u017A do ustawie\u0144 [accent]Extremity[] aby dopasowa\u0107 moda pod siebie, mi\u0142ej gry!
 
-# Buttons
+# Przyciski
 extremity-load = Za\u0142aduj
 extremity-save = Zapisz
 extremity-reset = Zresetuj
@@ -32,7 +39,7 @@ extremity-import = Importuj ze schowka
 extremity-unitdex-button = Otw\u00F3rz Edytor Unitdex\u00F3w
 extremity-new-entry = Dodaj wpis
 
-# Unitdex editor
+# Edytor Unitdex\u00F3w
 extremity-unitdex = Edytor Unitdex\u00F3w
 extremity-confirm-clear = Zresetowa\u0107 aktualny Unitdex do podstaw?
 extremity-overwrite = Unitdex ju\u017C istnieje, zapisanie spowoduje jego nadpisanie!
@@ -46,7 +53,7 @@ extremity-saved = Zapisano Unitdex jako
 extremity-loaded = Za\u0142adowano Unitdex
 extremity-removed = Zapis usuni\u0119ty!
 
-# Settings stuff
+# Ustawienia
 extremity-category = Extremity
 setting.extremity-difficulty.name = Skala Trudno\u015Bci
 setting.extremity-difficulty.description = Ustawia skal\u0119 trudno\u015Bci
@@ -91,23 +98,23 @@ setting.extremity-rows.description = Ustawia ilo\u015B\u0107 kolumn w Edytorze U
   \nUwaga, Edytor Unitdex\u00F3w jest aktualnie w fazie eksperymentalnej\
   \nZmiana tego ustawienia mo\u017Ce powodowa\u0107 lekkie b\u0142\u0119dy graficzne interfejsu
 
-# List UI
-list.extremity-modifiers-begin = --- [ [accent]Modyfikacje[] ] ---
-list.extremity-modifiers-end = --- [ Strona @/@ ] ---
+# Interfejs listy modyfikator\u00F3w
+list.extremity-modifiers.begin = --- [ [accent]Modyfikatory[] ] ---
+list.extremity-modifiers.end = --- [ Strona @/@ ] ---
 
-# Command feedback
+# Odpowiedzi komend
 cmd.extremity-difficulty = [accent][Extremity][]: Aktualna skala trudno\u015Bci wynosi @
 cmd.extremity-insufficient = [accent][Extremity][]:[scarlet] Brak uprawnie\u0144.
 cmd.extremity-reset = [accent][Extremity][]: Przywr\u00F3cono domy\u015Blny unitdex!
 cmd.extremity-submitted = [accent][Extremity][]: Ustawiono nowy unitdex!
 cmd.extremity-ready = [[accent][Extremity][]: Zapisano dane w pami\u0119ci podr\u0119cznej\nU\u017Cyj [accent]/unitdex submit[] aby zatwierdzi\u0107!
 
-# Console feedback
+# Odpowiedzi konsoli serwera
 con.extremity-difficulty = Aktualna skala trudno\u015Bci wynosi @
 con.extremity-difficulty-set = Ustawiono skal\u0119 trudno\u015Bci na @
 con.extremity-applied = Ustawiono nowy unitdex
 
-# Vote feedback
+# Odpowiedzi g\u0142osowa\u0144
 vote.extremity-ongoing = [accent][Extremity][]:[scarlet] G\u0142osowanie ju\u017C trwa, zaczekaj a\u017C si\u0119 zako\u0144czy!
 vote.extremity-denied = [accent][Extremity][]:[scarlet] Nie mo\u017Cesz g\u0142osowa\u0107 dwa razy!
 vote.extremity-time.difficulty = [accent][Extremity][]: Pozosta\u0142o @ sekund!\nZag\u0142osuj u\u017Cywaj\u0105c /diffvote (y/n)
