--- a/assets/bundles/bundle_pl.properties
+++ b/assets/bundles/bundle_pl.properties
@@ -117,13 +117,13 @@ con.extremity-applied = Ustawiono nowy unitdex
 # Odpowiedzi g\u0142osowa\u0144
 vote.extremity-ongoing = [accent][Extremity][]:[scarlet] G\u0142osowanie ju\u017C trwa, zaczekaj a\u017C si\u0119 zako\u0144czy!
 vote.extremity-denied = [accent][Extremity][]:[scarlet] Nie mo\u017Cesz g\u0142osowa\u0107 dwa razy!
-vote.extremity-time.difficulty = [accent][Extremity][]: Pozosta\u0142o @ sekund!\nZag\u0142osuj u\u017Cywaj\u0105c /diffvote (y/n)
+vote.extremity-time.difficulty = [accent][Extremity][]: Pozosta\u0142o @ sekund!\nZag\u0142osuj u\u017Cywaj\u0105c /difficulty (y/n)
 vote.extremity-invalid.difficulty = [accent][Extremity][]:[scarlet] Nieprawid\u0142owy parametr, u\u017Cyj /difficulty <0-10> aby zacz\u0105\u0107 g\u0142osowanie lub <yes/y>/<no/n> aby zag\u0142osowa\u0107!
 vote.extremity-cancelled.difficulty = [accent][Extremity][]: Inicjator anulowa\u0142 g\u0142osowanie zmiany skali trudno\u015Bci.
 vote.extremity-cancelled-admin.difficulty = [accent][Extremity][]: G\u0142osowanie zmiany skali trudno\u015Bci zosta\u0142o anulowane przez @
 vote.extremity-skip.difficulty = [accent][Extremity][]: Zmiana skali trudno\u015Bci zosta\u0142a wymuszona przez @
-vote.extremity-voted.difficulty = @ [white] zag\u0142osowa\u0142 [lime]za[] zmian\u0105 skali trudno\u015Bci na @ (@/@)\nZag\u0142osuj u\u017Cywaj\u0105c /diffvote (y/n)
-vote.extremity-voted-against.difficulty = @ [white] zag\u0142osowa\u0142 [scarlet]przeciw[] zmianie skali trudno\u015Bci na @ (@/@)\nZag\u0142osuj u\u017Cywaj\u0105c /diffvote (y/n)
+vote.extremity-voted.difficulty = @ [white] zag\u0142osowa\u0142 [lime]za[] zmian\u0105 skali trudno\u015Bci na @ (@/@)\nZag\u0142osuj u\u017Cywaj\u0105c /difficulty (y/n)
+vote.extremity-voted-against.difficulty = @ [white] zag\u0142osowa\u0142 [scarlet]przeciw[] zmianie skali trudno\u015Bci na @ (@/@)\nZag\u0142osuj u\u017Cywaj\u0105c /difficulty (y/n)
 vote.extremity-success.difficulty = [accent][Extremity][]: G\u0142osowanie zmiany skali trudno\u015Bci zako\u0144czone pomy\u015Blnie, ustawianie skali na @!
 vote.extremity-fail.difficulty = [accent][Extremity][]: G\u0142osowanie zmiany skali trudno\u015Bci zako\u0144czone.
 vote.extremity-time.modifier = [accent][Extremity][]: @ Pozosta\u0142o @ sekund!\nZag\u0142osuj u\u017Cywaj\u0105c /modifier (y/n)
