--- a/assets/bundles/bundle_pl.properties
+++ b/assets/bundles/bundle_pl.properties
@@ -6,27 +6,27 @@ extremity-error = [scarlet]Twoja wersja Extremity nie zgadza si\u0119 z wersj\u0
 extremity-success = [lime]Pobrano konfiguracj\u0119 Extremity od hosta!
 
 # Wiadomo\u015B\u0107 powitalna wy\u015Bwietlana po za\u0142adowaniu \u015Bwiata
-extremity-welcome = [accent]Witaj!\
+extremity-welcome = [stat]Witaj!\
   \nTa przypominajka wy\u015Bwietla si\u0119 jako i\u017C Extremity mo\u017Ce nadal by\u0107 aktywne\
   \nSprawd\u017A ustawienia moda je\u017Celi chcesz go wy\u0142\u0105czy\u0107, lub co\u015B zmieni\u0107!
 
 # Wiadomo\u015B\u0107 powitalna wysy\u0142ana graczom bez moda
-net.extremity-welcome = [accent]Witaj!\
+net.extremity-welcome = [stat]Witaj!\
   \n[lightgray]Host u\u017Cywa [scarlet]Extremity[], czyli moda utrudniaj\u0105cego gr\u0119 stworzonego przez [green]W[orange]M[brown]F[][][]!\
-  \nRozwa\u017C instalacj\u0119 [accent]Extremity[] aby zwi\u0119kszy\u0107 kompatybilno\u015B\u0107 z hostem!
+  \nRozwa\u017C instalacj\u0119 [stat]Extremity[] aby zwi\u0119kszy\u0107 kompatybilno\u015B\u0107 z hostem!
 
 # Przypominajki
-net.extremity-active = [accent][Extremity][]: [lightgray]Przypominajka - skalowanie trudno\u015Bci oraz modyfikatory mog\u0105 by\u0107 aktywne\
+net.extremity-active = [stat][Extremity][]: [lightgray]Przypominajka - skalowanie trudno\u015Bci oraz modyfikatory mog\u0105 by\u0107 aktywne\
   \nSprawd\u017A aktualne ustawienia u\u017Cywaj\u0105c [lime]/difficulty[] i [lime]/modifiers
-net.extremity-modifiers = [accent][Extremity][]: [lightgray]Przypominajka - niekt\u00F3re modyfikatory mog\u0105 by\u0107 aktywne\
+net.extremity-modifiers = [stat][Extremity][]: [lightgray]Przypominajka - niekt\u00F3re modyfikatory mog\u0105 by\u0107 aktywne\
   \nSprawd\u017A aktualny stan modyfikator\u00F3w u\u017Cywaj\u0105c [lime]/modifiers
 
 # Wiadomo\u015B\u0107 wy\u015Bwietlana podczas pierwszego uruchomienia
-extremity-info = [accent]Witaj w Extremity![]\
+extremity-info = [stat]Witaj w Extremity![]\
   \n\nTen mod stara si\u0119 [scarlet]utrudni\u0107 gr\u0119 bez modyfikowania czy dodawania kontentu, zamiast tego, dodaje nowe zachowania gry.\
-  \n\nCz\u0119\u015B\u0107 nowych zachowa\u0144 jest do\u015B\u0107 cie\u017Cka, dlatego [accent]Extremity[] przeznaczona jest dla wydajniejszych urz\u0105dze\u0144.\
+  \n\nCz\u0119\u015B\u0107 nowych zachowa\u0144 jest do\u015B\u0107 cie\u017Cka, dlatego [stat]Extremity[] przeznaczona jest dla wydajniejszych urz\u0105dze\u0144.\
   \nS\u0142absze urz\u0105dzenia mog\u0105 mie\u0107 problemy z wydajno\u015Bci\u0105, bugi lub nawet wywo\u0142ywa\u0107 crashe!\
-  \n\nPrzejd\u017A do ustawie\u0144 [accent]Extremity[] aby dopasowa\u0107 moda pod siebie, mi\u0142ej gry!
+  \n\nPrzejd\u017A do ustawie\u0144 [stat]Extremity[] aby dopasowa\u0107 moda pod siebie, mi\u0142ej gry!
 
 # Przyciski
 extremity-load = Za\u0142aduj
@@ -60,9 +60,10 @@ setting.extremity-difficulty.description = Ustawia skal\u0119 trudno\u015Bci
 setting.extremity-pvp.name = Dzia\u0142aj na PvP
 setting.extremity-pvp.description = Ustawia czy mod powinien dzia\u0142a\u0107 podczas hostowania PvP\
   \nUwaga, to ustawienie mo\u017Ce sprawi\u0107 i\u017C gry PvP b\u0119d\u0105 du\u017Co bardziej chaotyczne!
-setting.extremity-turrets.name = Wierzyczki Potrzebuj\u0105 Ch\u0142odziwa
-setting.extremity-turrets.description = Ustawia czy wierzyczki potrzebuj\u0105 ch\u0142odziwa aby funkcjonowa\u0107\
-  \nWierzyczki bez ch\u0142odziwa b\u0119d\u0105 otrzymywa\u0107 obra\u017Cenia podczas strzelania
+setting.extremity-turrets.name = Wie\u017Cyczki Potrzebuj\u0105 Ch\u0142odziwa
+setting.extremity-turrets.description = Ustawia czy wie\u017Cyczki potrzebuj\u0105 ch\u0142odziwa aby funkcjonowa\u0107\
+  \nWie\u017Cyczki bez ch\u0142odziwa b\u0119d\u0105 otrzymywa\u0107 obra\u017Cenia podczas strzelania\
+  \nNie wp\u0142ywa na dru\u017Cyny AI
 setting.extremity-guardian.name = Niebezpieczni Stra\u017Cnicy
 setting.extremity-guardian.description = Ustawia czy stra\u017Cnicy powinni dawa\u0107 pobliskim jednostkom status Wzmocnienia po \u015Bmierci
 setting.extremity-enemies.name = Szybcy Przeciwnicy
@@ -73,18 +74,28 @@ setting.extremity-allies.description = Ustawia czy wszystkie jednostki gracza po
 setting.extremity-campaign.name = Kampania Bez Pora\u017Cek
 setting.extremity-campaign.description = Ustawia czy kampania powinna zosta\u0107 zresetowana po pojedy\u0144czej pora\u017Cce
 setting.extremity-campaign.confirm = [scarlet]Uwaga[], stracenie jakiegokolwiek sektoru sprawi \u017Ce kampania na wybranej planecie zostanie [scarlet]zresetowana[]\
-  \n\n[accent]Je\u017Celi nie chcesz straci\u0107 post\u0119pu, zr\u00F3b backup danych gry lub nie u\u017Cywaj tego ustawienia![]\
+  \n\n[stat]Je\u017Celi nie chcesz straci\u0107 post\u0119pu, zr\u00F3b backup danych gry lub nie u\u017Cywaj tego ustawienia![]\
   \n\n[scarlet]Pami\u0119taj \u017Ce to ustawienie dzia\u0142a bez wzgl\u0119du na aktualn\u0105 skale trudno\u015Bci.
-setting.extremity-explosions.name = Ulepszone Ekplozje Wierzyczek
-setting.extremity-explosions.description = Ustawia czy symulowa\u0107 eksplozj\u0119 wierzyczek w ten sam spos\u00F3b co eksplozje generator\u00F3w
+setting.extremity-explosions.name = Ulepszone Eksplozje Wie\u017Cyczek
+setting.extremity-explosions.description = Ustawia czy symulowa\u0107 eksplozj\u0119 wie\u017Cyczek w ten sam spos\u00F3b co eksplozje generator\u00F3w
 setting.extremity-cores.name = Wra\u017Cliwe Rdzenie
-setting.extremity-cores.description = Ustawia czy zabi\u0107 WSZYSTKIE rdzenie na mapie gdy zginie pojedy\u0144czy z nich
+setting.extremity-cores.description = Ustawia czy zabi\u0107 WSZYSTKIE rdzenie na mapie gdy zginie pojedy\u0144czy z nich\
+  \nNie wp\u0142ywa na dru\u017Cyny AI
+setting.extremity-taken.name = Wra\u017Cliwe Budynki
+setting.extremity-taken.description = Ustawia czy zabi\u0107 WSZYSTKIE rdzenie na mapie kiedy zostanie zaatakowany budynek\
+  \nNie wp\u0142ywa na dru\u017Cyny AI
+setting.extremity-units.name = Wra\u017Cliwe Jednostki
+setting.extremity-units.description = Ustawia czy zabi\u0107 WSZYSTKIE rdzenie na mapie kiedy jednostka zostanie uszkodzona\
+  \nNie wp\u0142ywa na dru\u017Cyny AI
 setting.extremity-weather.name = Interakcje Pogodowe
-setting.extremity-weather.description = Ustawia czy w\u0142\u0105czy\u0107 interakcje pogody ze \u015Bwiatem, takie jak korodowanie jednostek gdy s\u0105 mokre
+setting.extremity-weather.description = Ustawia czy w\u0142\u0105czy\u0107 interakcje pogody ze \u015Bwiatem, takie jak korodowanie jednostek gdy s\u0105 mokre\
+  \nNie wp\u0142ywa na dru\u017Cyny AI
 setting.extremity-buildings.name = Pogoda Wp\u0142ywa na Budynki
-setting.extremity-buildings.description = Ustawia czy pogoda powinna wp\u0142ywa\u0107 tak\u017Ce na budynki
+setting.extremity-buildings.description = Ustawia czy pogoda powinna wp\u0142ywa\u0107 tak\u017Ce na budynki\
+  \nNie wp\u0142ywa na dru\u017Cyny AI
 setting.extremity-damage.name = Pogoda Uszkadza Budynki
 setting.extremity-damage.description = Ustawia czy niekt\u00F3re interakcje pogodowe powinny uszkadza\u0107 budynki\
+  \nNie wp\u0142ywa na dru\u017Cyny AI\
   \nWy\u0142\u0105czone podczas hostowania PvP
 setting.extremity-bullets.name = Skalowane Pociski
 setting.extremity-bullets.description = Ustawia czy skalowa\u0107 obra\u017Cenia pocisk\u00F3w z ich \u017Cywotno\u015Bci\u0105
@@ -99,15 +110,17 @@ setting.extremity-rows.description = Ustawia ilo\u015B\u0107 kolumn w Edytorze U
   \nZmiana tego ustawienia mo\u017Ce powodowa\u0107 lekkie b\u0142\u0119dy graficzne interfejsu
 
 # Interfejs listy modyfikator\u00F3w
-list.extremity-modifiers.begin = --- [ [accent]Modyfikatory[] ] ---
+list.extremity-modifiers.begin = --- [ [stat]Modyfikatory[] ] ---
 list.extremity-modifiers.end = --- [ Strona @/@ ] ---
 
 # Odpowiedzi komend
-cmd.extremity-difficulty = [accent][Extremity][]: Aktualna skala trudno\u015Bci wynosi @
-cmd.extremity-insufficient = [accent][Extremity][]:[scarlet] Brak uprawnie\u0144.
-cmd.extremity-reset = [accent][Extremity][]: Przywr\u00F3cono domy\u015Blny unitdex!
-cmd.extremity-submitted = [accent][Extremity][]: Ustawiono nowy unitdex!
-cmd.extremity-ready = [[accent][Extremity][]: Zapisano dane w pami\u0119ci podr\u0119cznej\nU\u017Cyj [accent]/unitdex submit[] aby zatwierdzi\u0107!
+cmd.extremity-difficulty = [stat][Extremity][]: Aktualna skala trudno\u015Bci wynosi @
+cmd.extremity-difficulty.locked = [stat][Extremity][]:[scarlet] Ustawienia aktualnej mapy wy\u0142\u0105czaj\u0105 mo\u017Cliwo\u015B\u0107 zmiany skali trudno\u015Bci.
+cmd.extremity-modifier.locked = [stat][Extremity][]:[scarlet] Ustawienia aktualnej mapy wy\u0142\u0105czaj\u0105 mo\u017Cliwo\u015B\u0107 zmiany modyfikator\u00F3w.
+cmd.extremity-insufficient = [stat][Extremity][]:[scarlet] Brak uprawnie\u0144.
+cmd.extremity-reset = [stat][Extremity][]: Przywr\u00F3cono domy\u015Blny unitdex!
+cmd.extremity-submitted = [stat][Extremity][]: Ustawiono nowy unitdex!
+cmd.extremity-ready = [stat][Extremity][]: Zapisano dane w pami\u0119ci podr\u0119cznej\nU\u017Cyj [stat]/unitdex submit[] aby zatwierdzi\u0107!
 
 # Odpowiedzi konsoli serwera
 con.extremity-difficulty = Aktualna skala trudno\u015Bci wynosi @
@@ -115,26 +128,26 @@ con.extremity-difficulty-set = Ustawiono skal\u0119 trudno\u015Bci na @
 con.extremity-applied = Ustawiono nowy unitdex
 
 # Odpowiedzi g\u0142osowa\u0144
-vote.extremity-ongoing = [accent][Extremity][]:[scarlet] G\u0142osowanie ju\u017C trwa, zaczekaj a\u017C si\u0119 zako\u0144czy!
-vote.extremity-denied = [accent][Extremity][]:[scarlet] Nie mo\u017Cesz g\u0142osowa\u0107 dwa razy!
-vote.extremity-time.difficulty = [accent][Extremity][]: Pozosta\u0142o @ sekund!\nZag\u0142osuj u\u017Cywaj\u0105c /difficulty (y/n)
-vote.extremity-invalid.difficulty = [accent][Extremity][]:[scarlet] Nieprawid\u0142owy parametr, u\u017Cyj /difficulty <0-10> aby zacz\u0105\u0107 g\u0142osowanie lub <yes/y>/<no/n> aby zag\u0142osowa\u0107!
-vote.extremity-cancelled.difficulty = [accent][Extremity][]: Inicjator anulowa\u0142 g\u0142osowanie zmiany skali trudno\u015Bci.
-vote.extremity-cancelled-admin.difficulty = [accent][Extremity][]: G\u0142osowanie zmiany skali trudno\u015Bci zosta\u0142o anulowane przez @
-vote.extremity-skip.difficulty = [accent][Extremity][]: Zmiana skali trudno\u015Bci zosta\u0142a wymuszona przez @
+vote.extremity-ongoing = [stat][Extremity][]:[scarlet] G\u0142osowanie ju\u017C trwa, zaczekaj a\u017C si\u0119 zako\u0144czy!
+vote.extremity-denied = [stat][Extremity][]:[scarlet] Nie mo\u017Cesz g\u0142osowa\u0107 dwa razy!
+vote.extremity-time.difficulty = [stat][Extremity][]: Pozosta\u0142o @ sekund!\nZag\u0142osuj u\u017Cywaj\u0105c /difficulty (y/n)
+vote.extremity-invalid.difficulty = [stat][Extremity][]:[scarlet] Nieprawid\u0142owy parametr, u\u017Cyj /difficulty <0-10> aby zacz\u0105\u0107 g\u0142osowanie lub <yes/y>/<no/n> aby zag\u0142osowa\u0107!
+vote.extremity-cancelled.difficulty = [stat][Extremity][]: Inicjator anulowa\u0142 g\u0142osowanie zmiany skali trudno\u015Bci.
+vote.extremity-cancelled-admin.difficulty = [stat][Extremity][]: G\u0142osowanie zmiany skali trudno\u015Bci zosta\u0142o anulowane przez @
+vote.extremity-skip.difficulty = [stat][Extremity][]: Zmiana skali trudno\u015Bci zosta\u0142a wymuszona przez @
 vote.extremity-voted.difficulty = @ [white] zag\u0142osowa\u0142 [lime]za[] zmian\u0105 skali trudno\u015Bci na @ (@/@)\nZag\u0142osuj u\u017Cywaj\u0105c /difficulty (y/n)
 vote.extremity-voted-against.difficulty = @ [white] zag\u0142osowa\u0142 [scarlet]przeciw[] zmianie skali trudno\u015Bci na @ (@/@)\nZag\u0142osuj u\u017Cywaj\u0105c /difficulty (y/n)
-vote.extremity-success.difficulty = [accent][Extremity][]: G\u0142osowanie zmiany skali trudno\u015Bci zako\u0144czone pomy\u015Blnie, ustawianie skali na @!
-vote.extremity-fail.difficulty = [accent][Extremity][]: G\u0142osowanie zmiany skali trudno\u015Bci zako\u0144czone.
-vote.extremity-time.modifier = [accent][Extremity][]: @ Pozosta\u0142o @ sekund!\nZag\u0142osuj u\u017Cywaj\u0105c /modifier (y/n)
-vote.extremity-invalid.modifier = [accent][Extremity][]:[scarlet] Nieprawid\u0142owy parametr, u\u017Cyj /modifier <id> aby zacz\u0105\u0107 g\u0142osowanie lub <yes/y>/<no/n> aby zag\u0142osowa\u0107!
-vote.extremity-cancelled = [accent][Extremity][]: Inicjator anulowa\u0142 g\u0142osowanie zmiany modyfikatora.
-vote.extremity-cancelled-admin.modifier = [accent][Extremity][]: G\u0142osowanie zmiany modyfikatora zosta\u0142o anulowane przez @
-vote.extremity-skip.modifier = [accent][Extremity][]: Zmiana modyfikatora zosta\u0142a wymuszona przez @
-vote.extremity-voted.modifier = @ [white] zag\u0142osowa\u0142 [lime]za[] w\u0142\u0105czeniem [accent]@[] (@/@)\nZag\u0142osuj u\u017Cywaj\u0105c /modifier (y/n)
-vote.extremity-voted.modifier-disable = @ [white] zag\u0142osowa\u0142 [lime]za[] wy\u0142\u0105czeniem [accent]@[] (@/@)\nZag\u0142osuj u\u017Cywaj\u0105c /modifier (y/n)
-vote.extremity-voted-against.modifier = @ [white] zag\u0142osowa\u0142 [scarlet]przeciw[] w\u0142\u0105czeniu [accent]@[] (@/@)\nZag\u0142osuj u\u017Cywaj\u0105c /modifier (y/n)
-vote.extremity-voted-against.modifier-disable = @ [white] zag\u0142osowa\u0142 [scarlet]przeciw[] wy\u0142\u0105czeniu [accent]@[] (@/@)\nZag\u0142osuj u\u017Cywaj\u0105c /modifier (y/n)
-vote.extremity-success.modifier-enable = [accent][Extremity][]: G\u0142osowanie zmiany modyfikatora zako\u0144czone pomy\u015Blnie, w\u0142\u0105czanie [accent]@[]!
-vote.extremity-success.modifier-disable = [accent][Extremity][]: G\u0142osowanie zmiany modyfikatora zako\u0144czone pomy\u015Blnie, wy\u0142\u0105czanie [accent]@[]!
-vote.extremity-fail.modifier = [accent][Extremity][]: G\u0142osowanie zmiany modyfikatora zako\u0144czone.
+vote.extremity-success.difficulty = [stat][Extremity][]: G\u0142osowanie zmiany skali trudno\u015Bci zako\u0144czone pomy\u015Blnie, ustawianie skali na @!
+vote.extremity-fail.difficulty = [stat][Extremity][]: G\u0142osowanie zmiany skali trudno\u015Bci zako\u0144czone.
+vote.extremity-time.modifier = [stat][Extremity][]: @ Pozosta\u0142o @ sekund!\nZag\u0142osuj u\u017Cywaj\u0105c /modifier (y/n)
+vote.extremity-invalid.modifier = [stat][Extremity][]:[scarlet] Nieprawid\u0142owy parametr, u\u017Cyj /modifier <id> aby zacz\u0105\u0107 g\u0142osowanie lub <yes/y>/<no/n> aby zag\u0142osowa\u0107!
+vote.extremity-cancelled = [stat][Extremity][]: Inicjator anulowa\u0142 g\u0142osowanie zmiany modyfikatora.
+vote.extremity-cancelled-admin.modifier = [stat][Extremity][]: G\u0142osowanie zmiany modyfikatora zosta\u0142o anulowane przez @
+vote.extremity-skip.modifier = [stat][Extremity][]: Zmiana modyfikatora zosta\u0142a wymuszona przez @
+vote.extremity-voted.modifier = @ [white] zag\u0142osowa\u0142 [lime]za[] w\u0142\u0105czeniem [stat]@[] (@/@)\nZag\u0142osuj u\u017Cywaj\u0105c /modifier (y/n)
+vote.extremity-voted.modifier-disable = @ [white] zag\u0142osowa\u0142 [lime]za[] wy\u0142\u0105czeniem [stat]@[] (@/@)\nZag\u0142osuj u\u017Cywaj\u0105c /modifier (y/n)
+vote.extremity-voted-against.modifier = @ [white] zag\u0142osowa\u0142 [scarlet]przeciw[] w\u0142\u0105czeniu [stat]@[] (@/@)\nZag\u0142osuj u\u017Cywaj\u0105c /modifier (y/n)
+vote.extremity-voted-against.modifier-disable = @ [white] zag\u0142osowa\u0142 [scarlet]przeciw[] wy\u0142\u0105czeniu [stat]@[] (@/@)\nZag\u0142osuj u\u017Cywaj\u0105c /modifier (y/n)
+vote.extremity-success.modifier-enable = [stat][Extremity][]: G\u0142osowanie zmiany modyfikatora zako\u0144czone pomy\u015Blnie, w\u0142\u0105czanie [stat]@[]!
+vote.extremity-success.modifier-disable = [stat][Extremity][]: G\u0142osowanie zmiany modyfikatora zako\u0144czone pomy\u015Blnie, wy\u0142\u0105czanie [stat]@[]!
+vote.extremity-fail.modifier = [stat][Extremity][]: G\u0142osowanie zmiany modyfikatora zako\u0144czone.
